# omega-edit-kotlin-grpc

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
protos/src/main/proto/com/sdell/omega_edit/: omega_edit.proto
server/: build.gradle.kts
server/src/main/kotlin/com/sdell/omega_edit/grpc/: BUILD.bazel  EditorService.kt  Editors.kt  OmegaEdit.kt  OmegaEditServer.kt  Session.kt  Utilities.kt  Viewport.kt
stub/: build.gradle.kts
