load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")

licenses(["notice"])

package(default_visibility = ["//server/src:__subpackages__""])

kt_jvm_binary(
    name = "omega_edit_server",
    srcs = ["OmegaEditServer.kt"],
    main_class = "com.sdell.omega_edit.grpc.OmegaEditServerKt",
    deps = [
        "//protos/src/main/proto/com/sdell/omega_edit:omega_edit_kt_grpc",
        "//protos/src/main/proto/com/sdell/omega_edit:omega_edit_kt_proto",
        "@io_grpc_grpc_java//netty",
    ],
)
